[package]
name = "random-trait"
version = "0.1.0"
authors = ["Elichai Turkel <elichai.turkel@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = "Rust library for a random trait meant to produce random generic types"
categories = ["algorithms", "no-std", "development-tools::testing", "cryptography"]
keywords = ["rand", "random", "random-rs", "rng"]

include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
doc-comment = { version = "0.3", optional = true }

[features]
u128 = []


[badges]
travis-ci = { repository = "elichai/random-rs" }
